--- a/scss/issue.scss
+++ b/scss/issue.scss
@@ -32,9 +32,9 @@ body {
 
 #about-this-issue {
 	.editor {
-		float:left; 
-		clear:right;
-		width: 33%;
+		//float:left; 
+		//clear:right;
+		//width: 33%;
 		img {
 			float:left; 
 			max-width: 2.5rem;
@@ -47,10 +47,10 @@ body {
 		span {display:block;}
 	}
 	.partners {
-		float:left; 
-		clear:right;
-		width: 33%;
-		padding-top: .5rem;
+		//float:left; 
+		//clear:right;
+		//width: 33%;
+		padding-top: 1rem;
 	}
 }
 
